--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <script src="https://cdn.tailwindcss.com"></script>
+ <script>
+    function toggleDropdown(){
+        let dropdown = document.querySelecto('#dropdownButton #dropdown');
+        dropdown.classList.toggle('hidden');
+    }
+</script>  
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="flex flex-col min-h-screen flex-grow">
- <header class="flex justify-between  gap-8 my-4 items-center">
+ <header class="flex justify-between gap-8 my-4 items-center">
     <img
     class="h-12 w-24"
     src=""
@@ -20,12 +26,24 @@
             <nav class="">saaremaa</nav>
         </div>
     </div>
-    <div class="flex gap-8 font-bold">
-        <nav class="">PLANEERI</nav>
+    <div class="flex gap-8 font-bold" id="dropdownButton">
+        <div
+        onclick="toggleDropdown()"
+        class="">PLANEERI</div>
+         <div 
+         id="dropdown"
+         class="rounded border-gray-500 bg-white p-8 absolute top-[50px] w-[400px] hidden">
+            <div class="cursor-pointer hover:bg-gray-300 p-4">Transport</div>
+            <div class="cursor-pointer hover:bg-gray-300 p-4">Majutus</div>
+            <div class="cursor-pointer hover:bg-gray-300 p-4">Söök</div>
+            <div class="cursor-pointer hover:bg-gray-300 p-4">Sündmused</div>
+            <div class="cursor-pointer hover:bg-gray-300 p-4">Giidid</div>
+        </div>
         <nav class="">AVASTA</nav>
         <nav class="">NAUDI</nav>
         <nav class="">VIIKINGITE SAAR</nav>
         <nav class="">INFO</nav>
+    
         <form class="max-w-sm mx-auto">
             <select id=" language" class="font-bold">
                 <option selcted> ET</option>
@@ -39,6 +57,12 @@
             <button type="submit"><i class="fa fa-search"></i></button>
             </form>
     </div>
+    <script>
+        function toggleDropdown(){
+            let dropdownButton = document.querySelector('#dropdownButton #dropdown');
+            dropdown.classList.toggle('hidden')
+        } 
+    </script>  
  </header>
   <p class="font-bold text-4xl mt-36">Avasta Saaremaa</p><br>
   <div class="text center gap-2 columns-2 text-black flex-grow">
