--- a/index.html
+++ b/index.html
@@ -121,24 +121,59 @@
         setupDropdown('dropdownButton5', 'dropdownMenu5');
     </script>  
  </header>
-  <p class="font-bold text-8xl mt-36">Avasta Saaremaa</p><br>
-  <div class="text center gap-2 columns-2 text-black flex-grow content-center">
-    <div class="">Saarte kenad uued kohad</div>
-    <dic class="">Saaremaa ja väikesaared</div>
-    <div class="">Saarte maitsed</div>
-    <figure class="relative max-w-sm transition-all duration-300 cursor-pointer">
+  <p class="font-bold  text-8xl mt-36">Avasta Saaremaa</p><br>
+  <div class="text center gap-1 columns-2 px-80 py-20 text-black flex-grow content-center">
+    <figure class="relative max-w-4xl py-5 transition-all cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg" src="images/N9A6631-copy-scaled.jpg" alt="kivi">
+        </a>
+        <figcaption class="absolute px-4  text-4xl py-10 text-white font-bold bottom-6">
+            <p>Saarte kenad uued kohad</p>
+        </figcaption>
+    </figure>
+    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg" src="images/Vilsandi-lighthouse-Marko-Palm-copy-scaled.jpg" alt="majaks">
+        </a>
+        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
+            <p>Saaremaa ja väikesaared</p>
+        </figcaption>
+    </figure>
+    <figure class="relative max-w-4xl transition-all duration-300 cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg" src="images/55A6905.jpg" alt="toit">
+        </a>
+        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
+            <p>Saarte maitsed</p>
+        </figcaption>
+    </figure>
+    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
             <a href="#">
                 <img class="rounded-lg" src="images/10_WRC_Acropolis_AL__487-768x512.jpg" alt="ralli">
             </a>
-            <figcaption class="absolute px-4 text-lg text-white font-bold bottom-6">
+            <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
                 <p>Kohalik soovitab selleks nädalaks</p>
             </figcaption>
     </figure>
-    <div class="">Saarte sündmused</div>
-    <dic class="">Saaremaa Terviseveed 200</div>
-    </div>
-  <div class="relative oflex justify-center items-center w-100 h-90 ">
-    <img src="https://www.biologicaldiversity.org/assets/img/species/taxa/SchoolingFish_WikimediaCommons_BrockenInaglory_BY-SA.jpg" alt="fish" class="w-600 h-500 object-cover rounded-lg justify-center ">
+    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg" src="images/N9A6490.1-copy-scaled.jpg" alt="auto/viiking">
+        </a>
+        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
+            <p>Saaremaa Terviseteed 200</p>
+        </figcaption>
+    </figure>
+    <figure class="relative max-w-4xl transition-all duration-300 cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg" src="images/Folk-dancers-3-Kristina-Magi-copy-scaled.jpg" alt="tantsijad">
+        </a>
+        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
+            <p>Saarte sündmused</p>
+        </figcaption>
+    </figure>
+  </div>
+  <div class="relative oflex px-50 justify-center items-center w-100 h-90 ">
+    <img src="https://www.biologicaldiversity.org/assets/img/species/taxa/SchoolingFish_WikimediaCommons_BrockenInaglory_BY-SA.jpg" alt="fish" class="w-600 h-500  px-50 object-cover rounded-lg justify-center ">
     <div class="absolute inset-0 bg-opacity-40 flex items-center justify-center rounded-lg">
      <div class="text-center text-white px-4"> <br> <br> <br>
         <p class="text-white-600">Sinu nimi</p>
