right news picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="flex flex-col min-h-screen flex-grow place-content-center" >
  <header class="flex justify-between gap-8 my-4  space-x-20 place-content-center max-w-4x3 mx-auto py-10 text-3xl">
     <img
-    class="h-12 w-60"
+    class="h-14 w-60"
     src="images/VSlogo_black_transp.png"
     alt="waves"
     />
@@ -171,18 +171,18 @@
             <p>Saarte sündmused</p>
         </figcaption>
     </figure>
-  </div>
-  <div class="relative oflex px-50 justify-center items-center w-100 h-90 ">
-    <img src="https://www.biologicaldiversity.org/assets/img/species/taxa/SchoolingFish_WikimediaCommons_BrockenInaglory_BY-SA.jpg" alt="fish" class="w-600 h-500  px-50 object-cover rounded-lg justify-center ">
+    </div>
+  <div class="flex justify-center items-center h-screen relative oflex px-10 py-10">
+    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class=" filter grayscal filter grayscale flex max-w-4xl rounded-lg justify-center"> 
     <div class="absolute inset-0 bg-opacity-40 flex items-center justify-center rounded-lg">
      <div class="text-center text-white px-4"> <br> <br> <br>
         <p class="text-white-600">Sinu nimi</p>
         <input placeholder="">
         <p class="text-white-600">Sinu email</p>
         <input placeholder=""> <br> <br>
-        <div class="flex items-center">
-        <input id="link-checkbox" type="checkbox" value="" class="w-6 h-6 text-white-600  border-gray-300 rounded focus:ring-white-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-        <label for="link-checkbox" class="ms-2 text-lm font-medium text-center text-white-900 ">Olen tutvunud <a href="#" class="text-white-600 dark:text-blue-500 hover:underline">andmetöötlise põhimõtetega.</a>.</label>
+        <div class="flex items-center"> 
+         <input id="link-checkbox" type="checkbox" value="" class=" flex-auto w-6 h-6 text-white-600  border-gray-300 rounded focus:ring-white-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+         <label for="link-checkbox" class="ms-2 text-lm font-medium text-center text-white-900 ">Olen tutvunud <a href="#" class="text-white-600 dark:text-blue-500 hover:underline">andmetöötlise põhimõtetega.</a>.</label>
         </div>
         <button class="bg-rose-600 py-2 px-4">Liitun uudiskirjaga</button> <br>
         <p class="text-white-600 py-6">Uudiskirjast saad häid ideid ja vihjeid, kuidas planeerida oma järgmine saarepuhkus.<br>
