--- a/index.html
+++ b/index.html
@@ -172,28 +172,29 @@
         </figcaption>
     </figure>
     </div>
-  <div class="flex justify-center items-center h-screen relative oflex px-10 py-10">
-    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class=" filter grayscal filter grayscale flex max-w-4xl rounded-lg justify-center"> 
+  <div class="flex justify-center items-center h-screen relative oflex">
+    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class="w-70 max-h-[60vh]  grayscale-70 rounded-lg object-cover mx-auto"> 
     <div class="absolute inset-0 bg-opacity-40 flex items-center justify-center rounded-lg">
      <div class="text-center text-white px-4"> <br> <br> <br>
-        <p class="text-white-600">Sinu nimi</p>
+        <p class="text-white-600 font-bold">Sinu nimi</p>
         <input placeholder="">
-        <p class="text-white-600">Sinu email</p>
+        <p class="text-white-600 font-bold">Sinu email</p>
         <input placeholder=""> <br> <br>
         <div class="flex items-center"> 
          <input id="link-checkbox" type="checkbox" value="" class=" flex-auto w-6 h-6 text-white-600  border-gray-300 rounded focus:ring-white-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-         <label for="link-checkbox" class="ms-2 text-lm font-medium text-center text-white-900 ">Olen tutvunud <a href="#" class="text-white-600 dark:text-blue-500 hover:underline">andmetöötlise põhimõtetega.</a>.</label>
+         <label for="link-checkbox" class="ms-2 text-lm font-medium text-center text-white-900 font-bold">Olen tutvunud <a href="#" class="text-white-600 font-bold dark:text-blue-500 hover:underline">andmetöötlise põhimõtetega.</a>.</label>
         </div>
         <button class="bg-rose-600 py-2 px-4">Liitun uudiskirjaga</button> <br>
-        <p class="text-white-600 py-6">Uudiskirjast saad häid ideid ja vihjeid, kuidas planeerida oma järgmine saarepuhkus.<br>
+        <h2 class="text-white-600 font-bold text-left text-4xl">Liitu uudiskirjaga</h2>
+        <p class="text-white-600 py-6 font-bold felx-auto text-center">Uudiskirjast saad häid ideid ja vihjeid, kuidas planeerida oma järgmine saarepuhkus.<br>
         Kirjutame, mida uut ja põnevat meitel on,mida siinsetel saatel teha ja läkitame teele meie ettevõtete parimad pakkumised</p>
      </div>
     </div>
 </div>
-  <div class="flex-grow flex itmes-center justify-center">
-    <div class="space-x-4">
-        <button class="bg-blue-900 text-white text-3xl font-bold py-6 px-12 rounded text-left w-64"> <i class="fab fa-facebook-square"></i>  Facebook</button>
-        <button class="bg-blue-700 text-white text-3xl font-bold py-6 px-12 rounded text-left w-64"><i class="fab fa-instagram"></i> Instagram</button>
+  <div class="flex-grow flex space-x-4 items-center justify-center">
+    <div class="flex space-x-4">
+        <button class="bg-blue-900 text-white text-3xl font-bold py-6 px-10 rounded text-left w-96 "> <i class="fab fa-facebook-square"></i>  Facebook</button>
+        <button class="bg-blue-700 text-white text-3xl font-bold py-6 px-10 rounded text-left w-96"><i class="fab fa-instagram"></i> Instagram</button>
     </div>
    </div>
 
