--- a/index.html
+++ b/index.html
@@ -123,57 +123,57 @@
  </header>
   <p class="font-bold  text-8xl mt-36">Avasta Saaremaa</p><br>
   <div class="text center gap-1 columns-2 px-80 py-20 text-black flex-grow content-center">
-    <figure class="relative max-w-4xl py-5 transition-all cursor-pointer">
+    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
         <a href="#">
-            <img class="rounded-lg" src="images/N9A6631-copy-scaled.jpg" alt="kivi">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6631-copy-scaled.jpg" alt="kivi">
         </a>
         <figcaption class="absolute px-4  text-4xl py-10 text-white font-bold bottom-6">
             <p>Saarte kenad uued kohad</p>
         </figcaption>
     </figure>
-    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
+    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
         <a href="#">
-            <img class="rounded-lg" src="images/Vilsandi-lighthouse-Marko-Palm-copy-scaled.jpg" alt="majaks">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/Vilsandi-lighthouse-Marko-Palm-copy-scaled.jpg" alt="majaks">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saaremaa ja väikesaared</p>
         </figcaption>
     </figure>
-    <figure class="relative max-w-4xl transition-all duration-300 cursor-pointer">
+    <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
         <a href="#">
-            <img class="rounded-lg" src="images/55A6905.jpg" alt="toit">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/55A6905.jpg" alt="toit">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saarte maitsed</p>
         </figcaption>
     </figure>
-    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
+    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
             <a href="#">
-                <img class="rounded-lg" src="images/10_WRC_Acropolis_AL__487-768x512.jpg" alt="ralli">
+                <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/10_WRC_Acropolis_AL__487-768x512.jpg" alt="ralli">
             </a>
             <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
                 <p>Kohalik soovitab selleks nädalaks</p>
             </figcaption>
     </figure>
-    <figure class="relative max-w-4xl py-5 transition-all duration-300 cursor-pointer">
+    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
         <a href="#">
-            <img class="rounded-lg" src="images/N9A6490.1-copy-scaled.jpg" alt="auto/viiking">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6490.1-copy-scaled.jpg" alt="auto/viiking">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saaremaa Terviseteed 200</p>
         </figcaption>
     </figure>
-    <figure class="relative max-w-4xl transition-all duration-300 cursor-pointer">
+    <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
         <a href="#">
-            <img class="rounded-lg" src="images/Folk-dancers-3-Kristina-Magi-copy-scaled.jpg" alt="tantsijad">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/Folk-dancers-3-Kristina-Magi-copy-scaled.jpg" alt="tantsijad">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saarte sündmused</p>
         </figcaption>
     </figure>
     </div>
-  <div class="flex justify-center items-center h-screen relative oflex">
-    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class="w-70 max-h-[60vh]  grayscale-70 rounded-lg object-cover mx-auto"> 
+  <div class="flex justify-center items-center h-screen relative oflex overflow-hidden rounded-md cursor-pointer">
+    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class="w-70 max-h-[60vh]  grayscale-70 rounded-lg object-cover mx-auto transition-all duration-500 hover:scale-110"> 
     <div class="absolute inset-0 bg-opacity-40 flex items-center justify-center rounded-lg">
      <div class="text-center text-white px-4"> <br> <br> <br>
         <p class="text-white-600 font-bold">Sinu nimi</p>
