--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     
         <form class="max-w-sm mx-auto">
             <select id=" language" class="font-bold py-4">
-                <option selected> ET</option>
                 <option value="FI">FI</option>
                 <option value="EN">EN</option>
+                <option selected> ET</option>
              </select>     
         </form>
         <div id="idd590e8a6d1863" a='{"t":"s","v":"1.2","lang":"en","locs":[618],"ssot":"c","sics":"ds","cbkg":"#FFFFFF00","cfnt":"#000000","slgp":2,"slis":10,"slpd":2,"slfs":16}'>Weather Data Source: <a href="https://sharpweather.com/weather_kuressaare/30_days/">30 days weather Kuressaare</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=idd590e8a6d1863"></script>
@@ -121,10 +121,12 @@
         setupDropdown('dropdownButton5', 'dropdownMenu5');
     </script>  
  </header>
-  <p class="font-bold  text-8xl mt-36">Avasta Saaremaa</p><br>
+ <div class=" px-80"> 
+    <h1 class="font-bold  text-8xl mt-36">Avasta Saaremaa</h1>
+ </div>
   <div class="text center gap-1 columns-2 px-80 py-20 text-black flex-grow content-center">
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
-        <a href="#">
+        <a href="https://visitsaaremaa.ee/saarte-kenad-uued-kohad-2024/">
             <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6631-copy-scaled.jpg" alt="kivi">
         </a>
         <figcaption class="absolute px-4  text-4xl py-10 text-white font-bold bottom-6">
@@ -140,7 +142,7 @@
         </figcaption>
     </figure>
     <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
-        <a href="#">
+        <a href="https://visitsaaremaa.ee/planeeri/meite-maitsed/">
             <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/55A6905.jpg" alt="toit">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
@@ -148,7 +150,7 @@
         </figcaption>
     </figure>
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
-            <a href="#">
+            <a href="https://visitsaaremaa.ee/kohalik-soovitab-selleks-nadalaks/">
                 <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/10_WRC_Acropolis_AL__487-768x512.jpg" alt="ralli">
             </a>
             <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
@@ -156,7 +158,7 @@
             </figcaption>
     </figure>
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
-        <a href="#">
+        <a href="https://visitsaaremaa.ee/saaremaa-terviseveed-200/">
             <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6490.1-copy-scaled.jpg" alt="auto/viiking">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
@@ -164,7 +166,7 @@
         </figcaption>
     </figure>
     <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
-        <a href="#">
+        <a href="https://visitsaaremaa.ee/planeeri/saaremaa-sundmused/">
             <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/Folk-dancers-3-Kristina-Magi-copy-scaled.jpg" alt="tantsijad">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
