new pictures, fish picture

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             <button type="submit" class="py-4"><i class="fa fa-search"></i></button>
             </form>
     </div>
+     <div>
+        <img class="rounded-lg transition-all object-bottom" src="images/Saaremaa-sundmused-2021-header-scaled.jpg" alt="">
+     </div>
     <script>
         function setupDropdown (buttonId, menuId) {
        const button = document.getElementById(buttonId);
@@ -126,19 +129,19 @@
  </div>
   <div class="text center gap-1 columns-2 px-80 py-20 text-black flex-grow content-center">
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
+        <a href="#">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/hanso-oige.jpg" alt="hanso">
+        </a>
+        <figcaption class="absolute px-4  text-4xl py-10 text-white font-bold bottom-6">
+            <p></p>
+        </figcaption>
+    </figure>
+    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
         <a href="https://visitsaaremaa.ee/saarte-kenad-uued-kohad-2024/">
             <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6631-copy-scaled.jpg" alt="kivi">
         </a>
         <figcaption class="absolute px-4  text-4xl py-10 text-white font-bold bottom-6">
             <p>Saarte kenad uued kohad</p>
-        </figcaption>
-    </figure>
-    <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
-        <a href="#">
-            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/Vilsandi-lighthouse-Marko-Palm-copy-scaled.jpg" alt="majaks">
-        </a>
-        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
-            <p>Saaremaa ja väikesaared</p>
         </figcaption>
     </figure>
     <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
@@ -150,16 +153,16 @@
         </figcaption>
     </figure>
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
-            <a href="https://visitsaaremaa.ee/kohalik-soovitab-selleks-nadalaks/">
-                <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/10_WRC_Acropolis_AL__487-768x512.jpg" alt="ralli">
-            </a>
-            <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
-                <p>Kohalik soovitab selleks nädalaks</p>
-            </figcaption>
+        <a href="#">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/Lenda-peale-Saaremaale-scaled.jpg" alt="kaart">
+        </a>
+        <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
+            <p>Lenda peale. Mitte üle.</p>
+        </figcaption>
     </figure>
     <figure class="relative max-w-4xl py-5 overflow-hidden rounded-md cursor-pointer">
         <a href="https://visitsaaremaa.ee/saaremaa-terviseveed-200/">
-            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/N9A6490.1-copy-scaled.jpg" alt="auto/viiking">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/55A8752-scaled.jpg" alt="naine lamab">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saaremaa Terviseteed 200</p>
@@ -175,7 +178,7 @@
     </figure>
     </div>
   <div class="flex justify-center items-center h-screen relative oflex overflow-hidden rounded-md cursor-pointer">
-    <img src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class="w-70 max-h-[60vh]  grayscale-70 rounded-lg object-cover mx-auto transition-all duration-500 hover:scale-110"> 
+    <img  style="filter: brightness(70%);" src="images/Liitu-visit-saaremaa-uudiskirjaga-scaled.jpg" alt="fish" class="w-[1200px] h-[400px]  grayscale-100 rounded-lg object-cover mx-auto"> 
     <div class="absolute inset-0 bg-opacity-40 flex items-center justify-center rounded-lg">
      <div class="text-center text-white px-4"> <br> <br> <br>
         <p class="text-white-600 font-bold">Sinu nimi</p>
