--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </figure>
     <figure class="relative max-w-4xl overflow-hidden rounded-md cursor-pointer">
         <a href="https://visitsaaremaa.ee/planeeri/meite-maitsed/">
-            <img class="rounded-lg transition-all duration-500 hover:scale-110" src="images/55A6905.jpg" alt="toit">
+            <img class="rounded-lg transition-all duration-500 hover:scale-110 h-[360px]" src="images/55A6905.jpg" alt="toit">
         </a>
         <figcaption class="absolute px-4 text-4xl py-10 text-white font-bold bottom-6">
             <p>Saarte maitsed</p>
